--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -67,6 +67,9 @@
 @import "template/typo";
 @import "template/symbol";
 
+@import "template/slider/main";
+
+
 //@import "template/conseil-emploi/main";
 @import "template/apl-simulator/main";
 
