--- a/src/styles/atom/_checkbox.scss
+++ b/src/styles/atom/_checkbox.scss
@@ -55,6 +55,7 @@
 		span {
 			padding-left: 30px;
 			line-height: 19px;
+			display: inline-block;
 		}
 		&:before {
 			display:block;
@@ -74,7 +75,7 @@
 			position: absolute;
 			width: 16px;
 			height: 16px;
-			background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill="#666" fill-rule="evenodd" d="M12.785 3.222c-.391-.391-1.023-.391-1.414 0l-4.984 7.181-1.677-2.188c-.39-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l2.418 3.156c.391.391 1.024.391 1.415 0l5.656-8.149c.391-.39.391-1.024 0-1.414z"/></svg>');
+			background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill="#0db9f0" fill-rule="evenodd" d="M12.785 3.222c-.391-.391-1.023-.391-1.414 0l-4.984 7.181-1.677-2.188c-.39-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l2.418 3.156c.391.391 1.024.391 1.415 0l5.656-8.149c.391-.39.391-1.024 0-1.414z"/></svg>');
 			top: 2px;
 			left: 2px;
 			transform: scale(0);
@@ -99,7 +100,7 @@
 			border: 1px solid color("primary", "darken-3");
 		}
 		&:after {
-			background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill="#fff" fill-rule="evenodd" d="M12.785 3.222c-.391-.391-1.023-.391-1.414 0l-4.984 7.181-1.677-2.188c-.39-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l2.418 3.156c.391.391 1.024.391 1.415 0l5.656-8.149c.391-.39.391-1.024 0-1.414z"/></svg>');
+			background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill="white" fill-rule="evenodd" d="M12.785 3.222c-.391-.391-1.023-.391-1.414 0l-4.984 7.181-1.677-2.188c-.39-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l2.418 3.156c.391.391 1.024.391 1.415 0l5.656-8.149c.391-.39.391-1.024 0-1.414z"/></svg>');
 		}
 	}
 	input:disabled + label {
@@ -111,6 +112,25 @@
 		span {
 			cursor:not-allowed;
 			opacity:0.5;
+		}
+	}
+	&.-big {
+		label span {
+			padding-left: 45px;
+			line-height: 25px;
+		}
+		label:before {
+			width:25px;
+			height:25px;
+		}
+		label:after {
+			width:24px;
+			height:24px;
+		}
+	}
+	&.-error {
+		label:before {
+			border:1px solid color("danger", "base");
 		}
 	}
 }
