--- a/src/index.jade
+++ b/src/index.jade
@@ -69,6 +69,6 @@ html(ng-scroll="" ng-app="app")
 			//.beta.large-display
 			div(ui-view="")
 			script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOvDTXQxf_TLoxnyK-cTtnmqfvjMpn-TU")
-			script(type="text/javascript" src="bower_components/jquery/dist/jquery.min.js")
+			script(src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous")
 			script(type="text/javascript" src="vendor/vendor.min.js")
 			script(type="text/javascript" src="scripts/app.min.js")
